Fix mobile padding and layout issues: - Add 10% mobile padding for all text content - Fix Work History section width to 33.33% - Improve progress bar direction (right-to-left) - Fix section column layout and spacing - Add mobile-specific CSS for better responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,15 @@ body {
   font-weight: 300;
   background-color: #525252;
   color: #555555;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+.container-fluid {
+  padding: 0;
+  margin: 0;
+  max-width: 100%;
 }
 
 /*--------------------------------------------Special Paddings/Margins/Text*/
@@ -92,6 +101,8 @@ h4 {
   display: table;
   width: 100%;
   table-layout: fixed;
+  margin: 0;
+  padding: 0;
 }
 
 .history-heading,
@@ -114,7 +125,7 @@ header {
 
 .logo {
   background: url("../images/behzad.jpg");
-  background-position: center;
+  background-position: left center;
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 360px;
@@ -252,6 +263,11 @@ footer .cv-pdf i:hover {
 
 .three-reasons-heading {
   margin-bottom: 15px;
+  padding: 0 20px;
+}
+
+.three-reasons-heading + p {
+  padding: 0 20px;
 }
 
 /*--------------------------------------------Personal Info*/
@@ -260,6 +276,7 @@ footer .cv-pdf i:hover {
   margin-bottom: 20px;
   display: block;
   clear: both;
+  padding: 0 20px;
 }
 
 .personal-info-item .key,
@@ -296,6 +313,7 @@ footer .cv-pdf i:hover {
 .progress {
   position: relative;
   height: 25px;
+  direction: rtl;
 }
 
 .progress-type {
@@ -305,10 +323,16 @@ footer .cv-pdf i:hover {
   padding: 3px 30px 2px 10px;
   color: #fafafa;
   background-color: rgba(25, 25, 25, 0.2);
+  direction: ltr;
+}
+
+.progress-bar {
+  direction: ltr;
 }
 
 .progress-section {
-  margin: 40px 20px;
+  margin: 40px 0;
+  width: 100%;
 }
 
 /*--------------------------------------------Work History*/
@@ -353,10 +377,15 @@ footer .cv-pdf i:hover {
 .history-heading {
   color: #fafafa;
   padding-top: 50px;
+  margin-bottom: 30px;
 }
 
 .history-items {
   margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 250px;
 }
 
 /*--------------------------------------------Contact*/
@@ -386,6 +415,12 @@ div#map {
   min-height: 360px;
 }
 
+/*--------------------------------------------Section Columns*/
+
+.section-column {
+  padding: 30px 25px;
+}
+
 /*--------------------------------------------Media Queries*/
 
 @media (min-width: 992px) {
@@ -393,6 +428,19 @@ div#map {
     padding: 0 30px 30px;
     float: none;
     display: table-cell;
+    vertical-align: top;
+    height: 100%;
+  }
+
+  .bg-color-three-reasons {
+    background-color: #ffffff;
+    width: 66.66666667% !important;
+  }
+
+  .bg-color-work-history {
+    background-color: #9b59b6;
+    min-height: 360px;
+    width: 33.33333333% !important;
   }
 
   .center-form {
@@ -403,8 +451,8 @@ div#map {
   }
 }
 
-@media not all and (min-resolution:.001dpcm) {
-  @supports (-webkit-appearance:none) {
+@media not all and (min-resolution: 0.001dpcm) {
+  @supports (-webkit-appearance: none) {
     @media (min-width: 992px) {
       .bg-color-work-history {
         max-height: 100vh;
@@ -414,3 +462,42 @@ div#map {
   }
 }
 
+/*--------------------------------------------Mobile Padding*/
+
+@media (max-width: 767px) {
+  .section-column {
+    padding: 30px 10% 30px 10%;
+  }
+
+  .personal-info-item {
+    padding: 0 10%;
+  }
+
+  .three-reasons-heading {
+    padding: 0 10%;
+  }
+
+  .three-reasons-heading + p {
+    padding: 0 10%;
+  }
+
+  .section-heading {
+    padding-left: 10%;
+  }
+
+  footer {
+    padding: 0 10%;
+  }
+
+  footer h5 {
+    padding-left: 10%;
+  }
+
+  footer p {
+    padding-left: 10%;
+  }
+
+  .social-links {
+    padding-left: 10%;
+  }
+}
